# supertone-cli

./: .gitignore  .prettierrc.json  CHANGELOG.md  LICENSE  PRD.md  README.md  STATUS.md  issues.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  brainstorm_notes.md  business_analysis.md  data_model.md  prd_digest.md  requirements.md  review_notes.md  test_plan.md  ui_review_notes.md  upstream_bugs.md  ux_spec.md
src/supertone_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  models.py  output.py
src/supertone_cli/commands/: __init__.py  config_cmd.py  tts.py  usage.py  voices.py
tests/: conftest.py  test_batch.py  test_changelog.py  test_ci.py  test_client.py  test_client_attr_helper.py  test_config.py  test_errors.py  test_integration_setup.py  test_lint_config.py  test_predict.py  test_scaffold.py  test_startup.py  test_streaming.py  test_tts.py  test_tts_params.py  test_typed_auth_errors.py  test_upstream_bugs.py  test_usage.py  test_voices.py  test_voices_clone.py  test_voices_search.py
tests/integration/: test_smoke.py
