[project]
name = "supertone-cli"
version = "0.1.0"
description = "CLI wrapper for the Supertone TTS SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "pillip" }]
dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0",
    "tomli_w>=1.0",
]

[project.optional-dependencies]
stream = ["sounddevice>=0.4"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
supertone = "supertone_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supertone_cli"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
