[project]
name = "supertone-cli"
dynamic = ["version"]
description = "Command-line interface for the Supertone Text-to-Speech API — generate, stream, batch, and manage voices from the terminal."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "pillip youn", email = "pillip@supertone.ai" }]
keywords = [
    "tts",
    "text-to-speech",
    "supertone",
    "cli",
    "speech-synthesis",
    "voice-cloning",
    "audio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0",
    "tomli_w>=1.0",
    "supertone>=0.2,<0.3",
]

[project.optional-dependencies]
stream = ["sounddevice>=0.4"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/supertone-inc/supertone-cli"
Repository = "https://github.com/supertone-inc/supertone-cli"
Issues = "https://github.com/supertone-inc/supertone-cli/issues"
Changelog = "https://github.com/supertone-inc/supertone-cli/blob/main/CHANGELOG.md"

[project.scripts]
supertone = "supertone_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/supertone_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/supertone_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "src/supertone_cli",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = [
    ".claude-kit",
    ".claude",
    ".worktrees",
    ".githooks",
    "docs",
    "audio",
    "scripts",
    "tests",
    "issues.md",
    "STATUS.md",
    "PRD.md",
    "*.wav",
    "*.mp3",
    ".DS_Store",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit the real Supertone API (requires SUPERTONE_API_KEY)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".claude-kit", ".claude", ".venv", ".worktrees", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
